2009-11-18  Alberto Garcia  <agarcia@igalia.com>

	* src/vgl-main-window.c (vgl_main_window_finalize)
	* src/vgl-bookmark-window.c (vgl_bookmark_window_finalize)
	* src/vgl-bookmark-mgr.c (vgl_bookmark_mgr_finalize):
	Remove unneeded calls to g_signal_handlers_destroy()

2009-11-17  Janne Mäkinen  <janne.makinen@surffi.fi>

	* po/fi.po: Updated Finnish translation.

2009-11-16  Alberto Garcia  <agarcia@igalia.com>

	* debian/changelog
	* debian/control.*:
	Updated package description

2009-11-15  Alberto Garcia  <agarcia@igalia.com>

	* data/cover/*/cover.png
	* data/cover/cover.svg
	New CD case image to place the album cover artwork.
	Image designed by Otto Krüja.

	* src/vgl-main-window.c (vgl_main_window_init)
	(vgl_main_window_set_state, vgl_main_window_set_album_cover):
	Replace the old cover frame with the CD case.

2009-11-15  Alberto Garcia  <agarcia@igalia.com>

	* src/vgl-main-window.c:
	Remove old copyright line

2009-11-15  Otto Krüja  <ottokrueja@gmx.net>

	* AUTHORS
	* data/icons/*/vagalume.png
	* data/icons/vagalume.xpm
	* data/icons/vagalume.svg
	* debian/control.maemo[2345]
	* src/uimisc.c:
	New Vagalume icon

2009-11-03  Alberto Garcia  <agarcia@igalia.com>

	* src/vgl-main-window.c (vgl_main_window_init):
	Maemo 5: make the progress bar smaller and the border thicker.

2009-11-03  Alberto Garcia  <agarcia@igalia.com>

	* Makefile.am
	* configure.ac:
	Install small icons under icons/hicolor/scalable/apps in Maemo 5

2009-11-03  Alberto Garcia  <agarcia@igalia.com>

	* build-package.sh
	* debian/control.maemo5:
	Added control file for Maemo 5.

2009-11-01  Alberto Garcia  <agarcia@igalia.com>

	* configure.ac
	* src/util.c (get_md5_hash):
	Drop support for libgcrypt.

2009-10-30  Alberto Garcia  <agarcia@igalia.com>

	* src/audio.c:
	Set GStreamer elements to play MP3 in Maemo 5.

2009-10-30  Alberto Garcia  <agarcia@igalia.com>

	* configure.ac:
	Disable the Maemo status bar plugin in Maemo 5.

2009-10-24  Alberto Garcia  <agarcia@igalia.com>
